--- a/package.json
+++ b/package.json
@@ -9,13 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mozilla/readability": "^0.5.0",
     "@radix-ui/react-context-menu": "^2.2.5",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.48.1",
+    "@types/jsdom": "^21.1.7",
+    "@types/node-fetch": "^2.6.12",
     "cheerio": "^1.0.0",
     "clsx": "^2.1.1",
     "epub-gen-memory": "^1.1.2",
+    "jsdom": "^26.0.0",
+    "lucide-react": "^0.474.0",
     "next": "15.1.6",
+    "node-fetch": "^3.3.2",
     "puppeteer": "^24.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
