--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "react-dom": "^19.0.0",
     "shadcn-ui": "^0.9.4",
     "tailwind-merge": "^3.0.1",
-    "turndown": "^7.2.0"
+    "turndown": "^7.2.0",
+    "@stripe/stripe-js": "^2.4.0",
+    "stripe": "^14.14.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
