--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@mozilla/readability": "^0.5.0",
     "@radix-ui/react-context-menu": "^2.2.5",
+    "@stripe/stripe-js": "^2.4.0",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.48.1",
     "@types/jsdom": "^21.1.7",
@@ -25,15 +26,17 @@
     "puppeteer": "^24.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-markdown": "^9.0.3",
+    "remark-gfm": "^4.0.0",
     "shadcn-ui": "^0.9.4",
+    "stripe": "^14.14.0",
     "tailwind-merge": "^3.0.1",
-    "turndown": "^7.2.0",
-    "@stripe/stripe-js": "^2.4.0",
-    "stripe": "^14.14.0"
+    "turndown": "^7.2.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@shadcn/ui": "^0.0.4",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
